# banshee

./: .gitattributes  .gitignore  .gitmodules  Banshee.sln  Makefile.am  README  autogen.sh  configure.ac
.github/: CONTRIBUTING.md
extras/: create-release-notes
extras/metrics/: metrics.csproj
help/fr/: fr.po
help/gl/: gl.po
po/: ar.po  ast.po  be@latin.po  bg.po  br.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  ko.po  ky.po  lt.po  lv.po  mk.po  nb.po  nl.po  nn.po  oc.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  (+14 more)
src/Backends/Banshee.GStreamer/: Banshee.GStreamer.csproj
src/Backends/Banshee.GStreamer/Banshee.GStreamer/: PlayerEngine.cs
src/Backends/Banshee.GStreamer/libbanshee/: Makefile.am  banshee-gst.c  banshee-gst.h
src/Backends/Banshee.GStreamerSharp/: Banshee.GStreamerSharp.csproj
src/Backends/Banshee.GStreamerSharp/Banshee.GStreamerSharp/: DvdManager.cs  PlayerEngine.cs  VideoManager.cs  (+1 more)
src/Backends/Banshee.Gio/: Banshee.Gio.csproj
src/Backends/Banshee.Gnome/: Banshee.Gnome.addin.xml  Banshee.Gnome.csproj
src/Backends/Banshee.Osx/: Banshee.Osx.csproj  Makefile.am
src/Backends/Banshee.Unix/: Banshee.Unix.csproj  Makefile.am
src/Backends/Banshee.Windows/: Banshee.Windows.csproj  Makefile.am
src/Clients/Beroe/: Beroe.csproj  Makefile.am
src/Clients/Booter/: Booter.csproj  Makefile.am
src/Clients/Halie/: Halie.csproj  Makefile.am
src/Clients/MediaPanel/: Makefile.am  MediaPanel.csproj
src/Clients/Muinshee/: Makefile.am  Muinshee.csproj
src/Clients/Nereid/: Makefile.am  Nereid.csproj
src/Core/Banshee.CollectionIndexer/: Banshee.CollectionIndexer.csproj
src/Core/Banshee.Core/: Banshee.Core.csproj
src/Core/Banshee.Services/: Banshee.Services.csproj
src/Core/Banshee.ThickClient/: Banshee.ThickClient.csproj  Makefile.am
src/Core/Banshee.WebBrowser/: Banshee.WebBrowser.csproj
src/Core/Banshee.Widgets/: Banshee.Widgets.csproj
src/Dap/: Makefile.am
src/Dap/Banshee.Dap/: Banshee.Dap.csproj
src/Dap/Banshee.Dap.AppleDevice/: Banshee.Dap.AppleDevice.csproj
src/Dap/Banshee.Dap.Karma/: Banshee.Dap.Karma.csproj
src/Dap/Banshee.Dap.MassStorage/: Banshee.Dap.MassStorage.csproj  Makefile.am
src/Dap/Banshee.Dap.Mtp/: Banshee.Dap.Mtp.csproj
src/Extensions/: Makefile.am
src/Extensions/Banshee.AmazonMp3/: Banshee.AmazonMp3.csproj  Makefile.am
src/Extensions/Banshee.AmazonMp3.Store/: Banshee.AmazonMp3.Store.csproj  Makefile.am
src/Extensions/Banshee.Audiobook/: Banshee.Audiobook.csproj  Makefile.am
src/Extensions/Banshee.BooScript/: Banshee.BooScript.csproj  Makefile.am
src/Extensions/Banshee.Bpm/: Banshee.Bpm.csproj  Makefile.am
src/Extensions/Banshee.CoverArt/: Banshee.CoverArt.csproj  Makefile.am
src/Extensions/Banshee.Daap/: Banshee.Daap.csproj  Makefile.am
src/Extensions/Banshee.Emusic/: Banshee.Emusic.csproj  Makefile.am
src/Extensions/Banshee.Emusic.Store/: Banshee.Emusic.Store.csproj  Makefile.am
src/Extensions/Banshee.Emusic/Banshee.Emusic/DownloadManager/: DownloadUserJob.cs
src/Extensions/Banshee.FileSystemQueue/: Banshee.FileSystemQueue.csproj  Makefile.am
src/Extensions/Banshee.Fixup/: Banshee.Fixup.csproj  Makefile.am
src/Extensions/Banshee.InternetArchive/: Banshee.InternetArchive.csproj  Makefile.am
src/Extensions/Banshee.InternetRadio/: Banshee.InternetRadio.csproj  Makefile.am
src/Extensions/Banshee.Lastfm/: Banshee.Lastfm.csproj  Makefile.am
src/Extensions/Banshee.LastfmStreaming/: Banshee.LastfmStreaming.csproj  Makefile.am
src/Extensions/Banshee.LibraryWatcher/: Banshee.LibraryWatcher.csproj  Makefile.am
src/Extensions/Banshee.MediaPanel/: Banshee.MediaPanel.csproj  Makefile.am
src/Extensions/Banshee.MiniMode/: Banshee.MiniMode.csproj  Makefile.am
src/Extensions/Banshee.MiroGuide/: Banshee.MiroGuide.csproj  Makefile.am
src/Extensions/Banshee.Mpris/: Banshee.Mpris.csproj  Makefile.am
src/Extensions/Banshee.MultimediaKeys/: Banshee.MultimediaKeys.csproj  Makefile.am
src/Extensions/Banshee.MultimediaKeys/Banshee.MultimediaKeys/: MultimediaKeysService.cs
src/Extensions/Banshee.NotificationArea/: Banshee.NotificationArea.csproj  Makefile.am
src/Extensions/Banshee.NotificationArea/Notifications/: Notification.cs  Notifications.cs
src/Extensions/Banshee.NowPlaying/: Banshee.NowPlaying.csproj  Makefile.am
src/Extensions/Banshee.OpticalDisc/: Banshee.OpticalDisc.csproj  Makefile.am
src/Extensions/Banshee.PlayQueue/: Banshee.PlayQueue.csproj  Makefile.am
src/Extensions/Banshee.PlayerMigration/: Banshee.PlayerMigration.csproj  Makefile.am
src/Extensions/Banshee.Podcasting/: Banshee.Podcasting.csproj  Makefile.am
src/Extensions/Banshee.RemoteAudio/: Makefile.am
src/Extensions/Banshee.RemoteAudio/Banshee.RemoteAudio/: RemoteAudioService.cs
src/Extensions/Banshee.Sample/: Banshee.Sample.csproj  Makefile.am
src/Extensions/Banshee.Sample/Banshee.Sample/: SampleSourceInterface.cs
src/Extensions/Banshee.SoundMenu/: Banshee.SoundMenu.csproj  Makefile.am
src/Extensions/Banshee.SqlDebugConsole/: Banshee.SqlDebugConsole.csproj  Makefile.am
src/Extensions/Banshee.Torrent/: Banshee.Torrent.csproj  Makefile.am
src/Extensions/Banshee.UPnPClient/: Banshee.UPnPClient.csproj  Makefile.am
src/Extensions/Banshee.UbuntuOneMusicStore/: Banshee.UbuntuOneMusicStore.csproj  Makefile.am
src/Extensions/Banshee.Wikipedia/: Banshee.Wikipedia.csproj  Makefile.am
src/Extensions/Banshee.YouTube/: Banshee.YouTube.csproj
src/Libraries/: Makefile.am
src/Libraries/Gtk.Extra/: Gtk.Extra.csproj  Gtk.Extra.dll.config.in  Makefile.am
src/Libraries/Gtk.Extra/Gtk/: Extensions.cs  HeaderBar.cs  JunctionSides.cs  Popover.cs  PopoverConstraint.cs  PopoverMenu.cs
src/Libraries/Gtk.Extra/Properties/: AssemblyInfo.cs
src/Libraries/Lastfm/: Lastfm.csproj
src/Libraries/Lastfm.Gui/: Lastfm.Gui.csproj
src/Libraries/Migo/: Migo.csproj
src/Libraries/Mono.Media/: Mono.Media.csproj
src/Libraries/Mtp/: Mtp.csproj
src/Libraries/MusicBrainz/: MusicBrainz.csproj
(+84 files in other folders)
